<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data/>

	<android.support.constraint.ConstraintLayout
		android:id="@+id/patienthome_constraint_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/patient_home_activity_patienthome_constraint_layout_background_color">
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/header_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/patient_home_activity_header_constraint_layout_height"
			android:background="#FFFFFF"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/info_bar_constraint_layout"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="148dp">
		
			<ImageView
				android:id="@+id/patient_image_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/patient_home_activity_patient_image_view_margin_top"
				android:scaleType="center"
				android:src="@drawable/patient"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="122dp"
				tools:layout_editor_absoluteY="51dp"/>
		
			<TextView
				android:id="@+id/waiting_since1012_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/patient_home_activity_waiting_since1012_text_view_margin_top"
				android:alpha="0.4"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/patient_home_activity_waiting_since1012_text_view_text"
				android:textColor="@color/patient_home_activity_waiting_since1012_text_view_text_color"
				android:textSize="@dimen/patient_home_activity_waiting_since1012_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/peter_text_view"
				tools:layout_editor_absoluteX="127dp"
				tools:layout_editor_absoluteY="304dp"/>
		
			<TextView
				android:id="@+id/peter_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/patient_home_activity_peter_text_view_margin_top"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:text="@string/patient_home_activity_peter_text_view_text"
				android:textColor="@color/patient_home_activity_peter_text_view_text_color"
				android:textSize="@dimen/patient_home_activity_peter_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/patient_image_view"
				tools:layout_editor_absoluteX="157dp"
				tools:layout_editor_absoluteY="251dp"/>
		
			<TextView
				android:id="@+id/traveler_dreamer_text_view"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/patient_home_activity_traveler_dreamer_text_view_margin_top"
				android:fontFamily="@font/font_lato_regular"
				android:gravity="center"
				android:lineSpacingMultiplier="1.18"
				android:text="@string/patient_home_activity_traveler_dreamer_text_view_text"
				android:textColor="#000000"
				android:textSize="@dimen/patient_home_activity_traveler_dreamer_text_view_text_size"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/waiting_since1012_text_view"
				tools:layout_editor_absoluteX="112dp"
				tools:layout_editor_absoluteY="357dp"/>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.constraint.ConstraintLayout
			android:id="@+id/info_bar_constraint_layout"
			android:layout_width="0dp"
			android:layout_height="@dimen/patient_home_activity_info_bar_constraint_layout_height"
			android:layout_marginTop="@dimen/patient_home_activity_info_bar_constraint_layout_margin_top"
			android:background="#FAFAFA"
			app:layout_constraintHorizontal_weight="1"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			tools:layout_editor_absoluteX="0dp"
			tools:layout_editor_absoluteY="64dp">
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/severityinfo_constraint_layout"
				android:layout_width="@dimen/patient_home_activity_severityinfo_constraint_layout_width"
				android:layout_height="@dimen/patient_home_activity_severityinfo_constraint_layout_height"
				android:layout_marginEnd="@dimen/patient_home_activity_severityinfo_constraint_layout_margin_end"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="291dp"
				tools:layout_editor_absoluteY="20dp">
			
				<TextView
					android:id="@+id/severity_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:alpha="0.4"
					android:fontFamily="@font/font_lato_regular"
					android:gravity="center"
					android:text="@string/patient_home_activity_severity_text_view_text"
					android:textColor="#000000"
					android:textSize="@dimen/patient_home_activity_severity_text_view_text_size"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="29dp"/>
			
				<TextView
					android:id="@+id/text_view_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/patient_home_activity_text_view_text_view_margin_end"
					android:layout_marginStart="@dimen/patient_home_activity_text_view_text_view_margin_start"
					android:fontFamily="@font/font_lato_bold"
					android:gravity="center"
					android:text="@string/patient_home_activity_text_view_text_view_text"
					android:textColor="@color/patient_home_activity_text_view_text_view_text_color"
					android:textSize="@dimen/patient_home_activity_text_view_text_view_text_size"
					app:layout_constraintHorizontal_weight="0.33"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="15dp"
					tools:layout_editor_absoluteY="0dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/expectedinfo_constraint_layout"
				android:layout_width="@dimen/patient_home_activity_expectedinfo_constraint_layout_width"
				android:layout_height="@dimen/patient_home_activity_expectedinfo_constraint_layout_height"
				android:layout_marginTop="@dimen/patient_home_activity_expectedinfo_constraint_layout_margin_top"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="162dp"
				tools:layout_editor_absoluteY="20dp">
			
				<TextView
					android:id="@+id/expected_min_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:alpha="0.4"
					android:fontFamily="@font/font_lato_regular"
					android:gravity="center"
					android:text="@string/patient_home_activity_expected_min_text_view_text"
					android:textColor="#000000"
					android:textSize="@dimen/patient_home_activity_expected_min_text_view_text_size"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/text_view_two_text_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="29dp"/>
			
				<TextView
					android:id="@+id/text_view_two_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/patient_home_activity_text_view_two_text_view_margin_end"
					android:layout_marginStart="@dimen/patient_home_activity_text_view_two_text_view_margin_start"
					android:fontFamily="@font/font_lato_bold"
					android:gravity="center"
					android:text="@string/patient_home_activity_text_view_two_text_view_text"
					android:textColor="#D9676E"
					android:textSize="@dimen/patient_home_activity_text_view_two_text_view_text_size"
					app:layout_constraintHorizontal_weight="0.55"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="12dp"
					tools:layout_editor_absoluteY="0dp"/>
			</android.support.constraint.ConstraintLayout>
		
			<android.support.constraint.ConstraintLayout
				android:id="@+id/patientsinfo_constraint_layout"
				android:layout_width="@dimen/patient_home_activity_patientsinfo_constraint_layout_width"
				android:layout_height="@dimen/patient_home_activity_patientsinfo_constraint_layout_height"
				android:layout_marginStart="@dimen/patient_home_activity_patientsinfo_constraint_layout_margin_start"
				android:layout_marginTop="@dimen/patient_home_activity_patientsinfo_constraint_layout_margin_top"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				tools:layout_editor_absoluteX="41dp"
				tools:layout_editor_absoluteY="20dp">
			
				<TextView
					android:id="@+id/patients_ahead_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:alpha="0.4"
					android:fontFamily="@font/font_lato_regular"
					android:gravity="center"
					android:text="@string/patient_home_activity_patients_ahead_text_view_text"
					android:textColor="#000000"
					android:textSize="@dimen/patient_home_activity_patients_ahead_text_view_text_size"
					app:layout_constraintHorizontal_weight="1"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toBottomOf="@+id/text_view_three_text_view"
					tools:layout_editor_absoluteX="0dp"
					tools:layout_editor_absoluteY="29dp"/>
			
				<TextView
					android:id="@+id/text_view_three_text_view"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/patient_home_activity_text_view_three_text_view_margin_end"
					android:layout_marginStart="@dimen/patient_home_activity_text_view_three_text_view_margin_start"
					android:fontFamily="@font/font_lato_bold"
					android:gravity="center"
					android:text="@string/patient_home_activity_text_view_three_text_view_text"
					android:textColor="@color/patient_home_activity_text_view_three_text_view_text_color"
					android:textSize="@dimen/patient_home_activity_text_view_three_text_view_text_size"
					app:layout_constraintHorizontal_weight="0.32"
					app:layout_constraintLeft_toLeftOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:layout_editor_absoluteX="15dp"
					tools:layout_editor_absoluteY="0dp"/>
			</android.support.constraint.ConstraintLayout>
		</android.support.constraint.ConstraintLayout>
	
		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>
	</android.support.constraint.ConstraintLayout>
</layout>